--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,19 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: pip
-        cache-dependency-path: setup.py
+    - name: Install and configure Poetry
+      uses: snok/install-poetry@v1
     - name: Install dependencies
-      run: |
-        pip install '.[test]'
+      run: poetry install --no-root
     - name: Run tests
-      run: |
-        pytest
-
+      run: pytest
