--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
+# IDE
+.idea
+.vscode
+
+# Python virtualenv
 .venv
+venv
+
+# Python artifacts
 __pycache__/
 *.py[cod]
 *$py.class
-venv
 .eggs
 .pytest_cache
 *.egg-info
+
+# MacOS
 .DS_Store
+
+# Build artifacts
 dist
 build
