Fix tests workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,7 @@ src_paths = ['dbt', 'test']
 
 [tool.pytest.ini_options]
 testpaths = [
-    "tests/unit",
-    "tests/functional",
+    "tests/unit"
 ]
 
 [build-system]
