--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,19 +37,15 @@ files = '.*\.py'
 max-line-length = 120
 exclude = ['.git', '.eggs', '__pycache__', 'venv', '.venv']
 ignore = [
-    # space before : (needed for how black formats slicing)
+    # space before: (needed for how black formats slicing)
     'E203',
     # line break before binary operator (needed for how black formats long lines)
     'W503'
 ]
-# Error codes to ignore, per file level module imported but unused
-per-file-ignores = """
-    */__init__.py:F401
-"""
 
 [tool.isort]
 profile = 'black'
-src_paths = ['dbt', 'test']
+src_paths = ['athena_udf', 'test']
 
 [tool.pytest.ini_options]
 testpaths = [
