--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,45 +1,20 @@
 name: Publish Python Package
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: read
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install and configure Poetry
-      uses: snok/install-poetry@v1
-    - name: Install dependencies
-      run: poetry install --no-root
-    - name: Run tests
-      run: pytest
   deploy:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Build and publish to pypi
+      uses: JRubics/poetry-publish@v2.0
       with:
-        python-version: "3.11"
-    - name: Install and configure Poetry
-      uses: snok/install-poetry@v1
-    - name: Build package
-      run: poetry build
-    - name: Publish
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        pypi_token: ${{ secrets.PYPI_TOKEN }}
