--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ pyarrow = "^15.0.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 pre-commit = "^3.7.0"
-mypy = "^1.9.0"
 black = "^24.3.0"
 flake8 = "^7.0.0"
+flake8-pyproject = "^1.2.3"
 
 [tool.autoflake]
 recursive = true
